[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "elasticsearch-toolkit"
version = "0.2.0"
description = "Elasticsearch Query Building and Transformation Toolkit"
readme = "README.md"
keywords = [ "dsl", "elasticsearch", "lucene", "query", "search" ]
license = { text = "MIT" }
authors = [
  { name = "HACK-WU" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "elasticsearch-dsl>=7,<9",
  "luqum>=0.11",
]

[dependency-groups]
dev = [
  "pip>=25.3",
  "pre-commit>=4.5.1",
  "pytest>=7",
  "pytest-cov>=4",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/elasticsearch_toolkit" ]

[tool.ruff]
format.docstring-code-format = true
lint.select = [ "E4", "E7", "E9", "F", "UP" ]
lint.extend-ignore = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.extend-safe-fixes = [ "UP" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=elasticsearch_toolkit",
  "--cov-report=term-missing",
]
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]
